--- a/packages/learning-package-one/package.json
+++ b/packages/learning-package-one/package.json
@@ -32,6 +32,7 @@
     "url": "git+https://github.com/wizeline/lerna-leo.git"
   },
   "scripts": {
+    "build": "rm -rf dist; tsc",
     "test": "echo test - package-one"
   },
   "typings": "lib/learning-package-one.d.ts",
