--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "link": "lerna exec npm link",
     "install": "lerna bootstrap",
-    "publish": "lerna run build && lerna publish --conventional-commits --yes --message 'chore(release): Publish'",
+    "publish": "lerna run build && lerna publish --conventional-commits --yes --message 'feat(release): Publish'",
     "test": "lerna run test"
   },
   "version": "0.3.8",
